Fix list text content spacing

--- a/css/pages/garden.css
+++ b/css/pages/garden.css
@@ -123,7 +123,7 @@ loftie-list li {
 		gap: 3rem;
 	}
 
-	:is(loftie-cta, loftie-list) picture {
+	:is(loftie-cta, loftie-list) picture, text-content {
 		flex-basis: 50%;
 	}
 }
